<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/location_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15sp"
                android:hint="@string/location_code"
                android:maxLength="32"
                android:paddingLeft="10dp"
                android:textColorHint="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/consumer_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15sp"
                android:hint="@string/consumer_number"
                android:inputType="textCapCharacters|numberDecimal"
                android:maxLength="32"
                android:paddingLeft="10dp"
                android:textColorHint="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/bill_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15sp"
                android:hint="@string/enter_from_month"
                android:inputType="textCapCharacters"
                android:maxLength="32"
                android:paddingLeft="10dp"
                android:textColorHint="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/bill_month_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15sp"
                android:hint="@string/enter_to_month"
                android:inputType="textCapCharacters"
                android:maxLength="32"
                android:paddingLeft="10dp"
                android:textColorHint="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/get_bill"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorMainBackground"
            android:text="@string/get_bill"
            android:textColor="@color/red" />

        <LinearLayout
            android:id="@+id/personal_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_info"
                android:textColor="@color/semafo_color"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingRight="5dp"
                    android:gravity="end"
                    android:text="@string/custimer_name_fill"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/customer_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingLeft="5dp"
                    android:textColor="@color/green"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingRight="5dp"
                    android:gravity="end"
                    android:text="@string/custimer_number_fill"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/customer_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingLeft="5dp"
                    android:textColor="@color/green"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingRight="5dp"
                    android:gravity="end"
                    android:text="@string/Location_or_division_fill"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/location_ordivision"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingLeft="5dp"
                    android:textColor="@color/green"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingRight="5dp"
                    android:gravity="end"
                    android:text="@string/tarill_fill"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tariff"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingLeft="5dp"
                    android:textColor="@color/green"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ledger_details"
            android:textColor="@color/semafo_color"
            android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"></View>
        </LinearLayout>



        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false"
            android:id="@+id/bill_details_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>