<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/personal_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/month_year_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="May 2018"
        android:textColor="@color/select_setType"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="@string/bill_number_fill"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/bill_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="@string/reading_fill"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/reading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="@string/current_bill_fill"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/current_bill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="@string/arrear_bill_fill"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/arrear_bill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="@string/total_bill_fill"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/total_bill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/paid_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="@string/paid_fill"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/paid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="7">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="@string/meter_condition_fill"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/meter_condition"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="7">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="@string/cd_fill"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="invisible"
                android:weightSum="7">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="@string/due_date_fill"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/due_date_extra"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="invisible"
                android:weightSum="7">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="@string/due_date_fill"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/due_date_extra2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/due_date_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="7">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="@string/due_date_fill"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/due_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pay_date_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="visible"
                android:weightSum="7">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="@string/pay_date_fill"
                    android:textColor="@color/green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/pay_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>